syntax = "proto3";
option go_package = "hahiye";
option java_package = "rw.hahiye.hahiye";
option java_outer_classname = "Hahiye";
option java_multiple_files = true;

// imports
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Hahiye Service
//
// Hahiye Service API consists of a multiple service which returns their  messages.
// We will decouple Individual service in future
package hahiye;


// creating common message type used by varies services
// 
// StatusResponse represent response from service and their description
message StatusResponse {
    string status_code = 1;
    string message = 2;
}

// Authentication Service
// 
// AuthRequest
message AuthRequest{
    string username = 1;
    string password = 2;
}

// AuthResponse
message AuthResponse {
    string token = 1;
}

// AuthService
service AuthService {
    rpc Login(AuthRequest) returns (AuthResponse){}
}

// AccountService
service AccountService {
    rpc CreateAccount (Account) returns (StatusResponse);
    rpc DeleteAccount (AccountRequest) returns (StatusResponse);
    rpc GetAccount (AccountRequest) returns (Account);
}

// Account represent Account model and its properties
message Account {
    string id = 1;
    string name = 2;
    string username = 3;
    string password = 4;
    string email = 5;
    string profile_url = 6;
    bool verified = 7;
    google.protobuf.Timestamp created_at = 8;
}

message AccountRequest {
    string id = 1;
    string name = 2;
}

// PlaceService
service PlaceService {
    rpc AddService (Place) returns (StatusResponse);
    rpc DeletePlace (PlaceRequest) returns (StatusResponse);
    rpc GetPlace (PlaceRequest) returns (Place);
    rpc GetPlaces (google.protobuf.Empty) returns (stream Places);
}

// Place represent Place model and its properties
message Place {
    string id = 1;
    string name = 2;
    string featured = 3;
    string website = 4;
    string tagline = 5;
    string description = 6;
    string contact = 7;
    bool verified = 9;
    google.protobuf.Timestamp created_at = 8;
}

message Places {
    repeated Place places = 1;
}

message PlaceRequest {
    string id = 1;
    string name = 2;
}

// InterestService
service InterestService {
    rpc AddInterest (Interest) returns (StatusResponse);
    rpc Removeinterest (InterestRequest) returns (StatusResponse);
    rpc GetInterest (InterestRequest) returns (Interest);
    rpc GetInterests (google.protobuf.Empty) returns (stream Interests);
}


message Interest {
    string id = 1;
    string name = 2;
}

message Interests {
    repeated Interest interests = 1;
}

message InterestRequest {
    string id = 1;
    string name = 2;
}

